2003-07-14  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif: an incomplete implementation of a new
	  (written-in-C) QIF importer.  The code compiles but has not
	  been tested.  Yet to do: merging, conversion to gnc, and UI.

	* configure.in: search for db-4.1.  Fixes #116509.

2003-07-10  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/import-parse.[ch]: routines to parse numbers
	  and dates in a mostly-locale-agnostic way.
	* src/import-export/import-format-dialog.c: a dialog to ask the user
	  to choose a format, when parsing just isn't enough.
	* src/import-export/generic-import.glade: add the format_match dialog
	* src/import-export/test/test-import-parse.c: test the import-parse
	  routines.

2003-07-09  Derek Atkins  <derek@ihtfp.com>

	* configure.in: change (and comment out) checks for pthreads
	* macros/acx_pthread.m4: change pthread search (should be removed)
	* src/engine/guid.c: remove pthread code and just use a static buffer.
	  (pthread code is kept within some #ifdef's, just in case we decide to
	   put it back in later).

	* src/app-utils/gnc-ui-util.[ch]: add a function to parse a numeric
	  with the caller providing all the locale-specific information

	* src/business/business-core/gncBillTerm.c:
	* src/business/business-core/gncTaxTable.c:
	  Fix a crash where removing items in the wrong order could
	  cause "Bad Things" to happen -- referencing an invalid
	  object.  When being destroyed, an object should remove itself
	  from it's parent's list of children, in addition to removing
	  itself from it's children's pointer-to-parent.

2003-07-09  Christian Stimming  <stimming@tuhh.de>

	* README: Added remark about gnucash-docs.
	
	* src/import-export/hbci/druid-hbci-initial.c: Clarify the part of
	the HBCI setup about potentially adding HBCI accounts manually.

2003-07-04  David Hampton  <hampton@employees.org>

	* src/gnome/dialog-price-edit-db.c: Add a couple of extra checks